<resources>
    <string name="app_name">Portinas</string>
    <string name="aforoinsert_str">Introduzca el aforo</string>
    <string name="aforo_str">Aforo</string>
    <string name="edit_text_ph">p. ej. 250000</string>
    <string name="continue_but">Continuar</string>
    <string name="texto_vacio_str">Texto Vacio</string>
    <string name="nav_nfc">NFC</string>
    <string name="nav_config">Ajustes</string>
    <string name="nav_share">Compartir</string>
    <string name="nav_connect">Conectar</string>
    <string name="nav_bluetooth">Bluetooth</string>
    <string name="nav_code">Conectar con codigo</string>
    <string name="nav_info">Sobre Nosotros</string>
    <string name="navigation_drawer_open">Abrir menu lateral</string>
    <string name="navigation_drawer_close">Cerrar menu lateral</string>
    <string name="browse_str">Buscar con:</string>
    <string name="share_text">Comparte la aplicacion: https://github.com/BraisBarboza/Portinas</string>
    <string name="code_title">Utiliza el siguiente código para enlazar tu contador en ontro terminal:</string>
    <string name="link_title">Añade el código de otro contador para enlazarlo a tu terminal:</string>
    <string name="link_but">Enlazar contador</string>
    <string name="link_et">Añadir contador</string>
    <string name="defaultValue">default</string>
    <string name="resetcode_but">Reiniciar código</string>
    <string name="contador_str">Personalizar Contador</string>
    <string name="limite_str">Límite de Aforo</string>
    <string name="limite_sub">Añade la cantidad disponible de ocupación</string>
    <string name="active_screen_str">Pantalla siempre activa</string>
    <string name="active_screen_switch_str">No apagar ni atenuar la pantalla mientras se usa la aplicación.</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="backpress">\Presiona otra vez para salir</string>
    <string name="nfc_default_tv_text">123123123</string>
    <string name="no_nfc_toast_text">NFC no esta disponible</string>
    <string name="nfc_button_write">Escribir</string>
    <string name="nfc_button_read">Leer</string>
    <string name="nfc_default_tv_text_read">Leo:</string>
    <string name="nfc_error_detected">No se han encontrado dispositivos NFC</string>
    <string name="nfc_write_success">Enviado Correctamente</string>
    <string name="nfc_write_error">No se pudo escribir</string>
    <string name="NFC_information_panel">Acerca una nueva tarjeta NFC para habilitarla en el sistema</string>
    <string name="help_str">Ayuda</string>
    <string name="full_str">Aforo Completo</string>
    <string name="insertcode">El codigo no existe:</string>
    <string name="purpouse">Una aplicaciónd de control de aforo</string>
    <string name="nav_us">Información</string>
    <string name="nav_settings">Configuración</string>
    <string name="insertcode">Inserte un código para enlazar</string>


</resources>