<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aforo"
            android:icon="@drawable/ic_baseline_person_pin_24"
            android:title="@string/aforo_str" />
        <item
            android:id="@+id/nav_code"
            android:icon="@drawable/ic_baseline_phonelink_ring_24"
            android:title="@string/nav_code" />
        <item
            android:id="@+id/nav_bluetooth"
            android:icon="@drawable/ic_baseline_bluetooth_24"
            android:title="@string/nav_bluetooth" />
        <item
            android:id="@+id/nav_nfc"
            android:icon="@drawable/ic_nfc_logo"
            android:title="@string/nav_nfc" />
    </group>

    <item android:title="@string/nav_config">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/nav_config" />
            <item
                android:id="@+id/nav_compartir"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_giticon"
                android:icon="@drawable/ic_github_icon"
                android:title="@string/nav_info" />



        </menu>


    </item>
</menu>