<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCA6AB"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nfc_tv_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nfc_default_tv_text" />

    <Button
        android:id="@+id/NFC_button_write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nfc_button_write" />
    <TextView
        android:id="@+id/nfc_tv_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nfc_default_tv_text_read" />
    <Button
        android:id="@+id/NFC_button_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nfc_button_read" />
</LinearLayout>