<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterAforoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_height="250dp"
        android:background="@drawable/squarebox"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/square_tv"
            android:text="@string/aforo_str"
            android:textSize="25dp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
        />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/square_edtxt"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_height="wrap_content"
            android:background="#F4F1F1"
            android:hint="@string/edit_text_ph"
            android:textAlignment="center"
            android:textSize="22dp"
            android:inputType="number"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp"/>

        <Button
            android:id="@+id/square_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_but">
        </Button>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>